--- a/jaxrsdemo/pom.xml
+++ b/jaxrsdemo/pom.xml
@@ -102,7 +102,19 @@
 		    <artifactId>jersey-client</artifactId>
 		    <version>2.1</version>
 		</dependency>
-
+		
+		<dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <!-- 
+        <dependency>
+		    <groupId>com.sun.jersey</groupId>
+		    <artifactId>jersey-json</artifactId>
+		    <version>1.8</version>
+		 </dependency>
+ 		-->
   </dependencies>
   
 </project>
