--- a/jaxrsdemo/src/main/webapp/WEB-INF/web.xml
+++ b/jaxrsdemo/src/main/webapp/WEB-INF/web.xml
@@ -11,12 +11,18 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>com.sivalabs.jaxrsdemo.RestConfig</param-value>
+            <param-value>com.sivalabs.jaxrsdemo.config.RestConfig</param-value>
         </init-param>
         <!-- 
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
             <param-value>com.sivalabs.jaxrsdemo</param-value>
+        </init-param>
+         -->
+         <!--
+          <init-param>
+            <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+            <param-value>true</param-value>
         </init-param>
          -->
     </servlet>
