--- a/javaee-rest/pom.xml
+++ b/javaee-rest/pom.xml
@@ -61,6 +61,13 @@
 			<scope>runtime</scope>
 		</dependency>
           
+          <!-- if you are using Jersey client specific features -->
+		<dependency>
+		    <groupId>org.glassfish.jersey.core</groupId>
+		    <artifactId>jersey-client</artifactId>
+		    <version>2.1</version>
+		</dependency>
+		
          <dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
