--- a/javaee-rest/pom.xml
+++ b/javaee-rest/pom.xml
@@ -75,6 +75,13 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.21</version>
+		</dependency>
+            
+            
   </dependencies>
   
 </project>
